package edu.uees.tutorias.notification;

public interface Notificador {
    void notificar(String mensaje);
}